examples/test/testpolicy8896.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8896
  namespace: namespace8
spec:
  podSelector:
    matchLabels:
      key19: value33
      key15: value29
      key4: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value5
          key48: value12
          key9: value37
      podSelector:
        matchLabels:
          key5: value32
          key44: value38
